--- a/android/Notify/app/src/main/res/values/colors.xml
+++ b/android/Notify/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#FF9800</color>
     <color name="colorPrimaryDark">#F57C00</color>
-    <color name="colorAccent">#FFEB3B</color>
+    <color name="colorAccent">#FFFFFF</color>
 </resources>
