--- a/android/Notify/app/src/main/res/menu/menu_main.xml
+++ b/android/Notify/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,16 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/sound"
+        android:checkable="true"
+        android:orderInCategory="4"
+        android:title="@string/menu_sound"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/vibration"
+        android:checkable="true"
+        android:orderInCategory="5"
+        android:title="@string/menu_vibration"
+        app:showAsAction="never" />
 </menu>
